# find-torrent-files

./: .gitignore  README.md  main.py  pyproject.toml
lib/: torrent.py
src/find_torrent_files/: __main__.py  find.py  nullio.py  torrent.py
