[project]
name = "find-torrent-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["bencodepy>=0.9.5", "humanize>=4.12.3", "xxhash>=3.5.0"]


[tool.ruff]
line-length = 88
indent-width = 2

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
